fixing content behind navigation bar

--- a/src/App.css
+++ b/src/App.css
@@ -5,5 +5,5 @@
 }
 
 .container {
-  padding: 20px;
+  padding-bottom: 65px;;
 }
